<resources>
    <!--    General-->
    <string name="app_name">RunIO</string>

    <!--    Home-->
    <string name="location_button_caption">Get Location Permission</string>
    <string name="start_activity_button_caption">Start Activity</string>
    <string name="lobbies_button_caption">Lobbies</string>

    <!--    Activity-->
    <string name="stop_activity_button_caption">Stop Activity</string>

    <!--    Lobbies-->
    <string name="create_lobby_button_caption">New Lobby</string>

    <!--    Profile-->
    <string name="button_sign_out_caption">Sign Out</string>

    <!--    NewLobby-->
    <string name="new_lobby_title">Create New Lobby</string>
    <string name="new_lobby_name_form_caption">New Lobby Name</string>
    <string name="new_lobby_submit_button_caption">Create Lobby</string>

    <!--  AddPlayer-->
    <string name="add_player_title">Add Player to Lobby</string>
    <string name="add_player_email_form_caption">Player E-mail</string>
    <string name="add_player_submit_button_caption">Add Player</string>

    <!--    LobbyStatsActivity-->
    <string name="lobby_stats_add_player_button_text">Add Player</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="text_above_the_map"></string>
    <string name="text_below_the_map"></string>
    <string name="stop_warning">You have not run a complete loop! Ending the activity now will result in your run being lost.  Are you sure you want to end the activity?</string>
    <string name="confirm_stop_activity_button_caption">Stop Activity</string>
    <string name="keep_running_button_caption">Keep Running!</string>
    <string name="lobby_stats_button_caption">View Lobby Stats</string>
    <string name="finish_message_caption">Congratulations!</string>
</resources>
